# vibemom

./: .dockerignore  .env.example  .gitignore  CODEX_OK.txt  Dockerfile  Makefile  QA_PACK.md  README.md  SPEC.md  V2_SUMMARY.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  deploy_vps.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_forward_compat_v2.py  003_submission_current_step.py  004_submission_rendered_post.py  005_submission_fix_request_moderated_at.py  006_submission_public_publishing.py  007_submission_moderation_telegram.py  008_submission_lifecycle_published_reviewed_at.py
docs/: API_DEPLOY.md  DEPLOY.md  MINIAPP_API_SPEC.md  MINIAPP_CABINET_ARCHITECTURE.md  MINIAPP_DATA_CONTRACT.md  MINIAPP_DEPLOY.md  MINIAPP_DESIGN_SYSTEM.md  MINIAPP_RUNBOOK.md  MINIAPP_VERIFY.md  PROJECT_MAP.md  V2_FORM_STEPS.md  V2_UX_KIT_ARCHITECTURE.md
infra/certbot/: .gitkeep  README.md
infra/nginx/: README.md  nginx.conf
scripts/: audit_copy.py  deploy-vps.sh  entrypoint.sh  test_feed.py  v2_repo_smoke.py
task-tracker/: README.md  package-lock.json  package.json  tailwind.config.js
tests/: conftest.py  test_api_cors_config.py  test_editor_schema.py  test_matching.py  test_messages.py  test_project_submission_schema.py  test_renderer.py  test_services.py  test_smoke_v1.py  test_smoke_v2.py  test_submission_engine.py  test_v2_refactored.py  test_v2_rendering.py  test_v2_repo.py  test_v2_schema.py  test_v2_ux.py  test_validators.py
(+133 files in other folders)
