[project]
name = "vibe-market"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "asyncpg>=0.30",
    "SQLAlchemy[asyncio]>=2.0,<3",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
